--- a/tensegrity.ipynb
+++ b/tensegrity.ipynb
@@ -83,6 +83,60 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Energy functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77.44418956462567\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = 9.81\n",
+    "def E_ext(X, M):\n",
+    "    return g * np.sum(M * X[:, 2])\n",
+    "\n",
+    "rho = 1\n",
+    "c = 1\n",
+    "def E_bar(X, bars):\n",
+    "    bars_indices = np.asarray(np.where(bars != 0))\n",
+    "    grav = 0\n",
+    "    elast = 0\n",
+    "    for i, j in bars_indices.T:\n",
+    "        grav += bars[i, j] * (X[i, 2] + X[j, 2])\n",
+    "        elast += (np.linalg.norm(X[i] - X[j]) - bars[i, j])**2 / bars[i, j]**2\n",
+    "    return rho * g * grav / 2 + c / 2 *  elast\n",
+    "\n",
+    "k = 1\n",
+    "def E_cable(X, cables):\n",
+    "    cables_indices = np.asarray(np.where(cables != 0))\n",
+    "    energy = 0\n",
+    "    for i, j in cables_indices.T:\n",
+    "        if np.linalg.norm(X[i] - X[j]) > cables[i, j]:\n",
+    "            energy += (np.linalg.norm(X[i] - X[j]) - cables[i, j])**2 / cables[i, j]**2\n",
+    "    return energy * k / 2 \n",
+    "\n",
+    "def total_energy(X, cables, bars, M):\n",
+    "    return E_ext(X, M) + E_bar(X, bars) + E_cable(X, cables)\n",
+    "\n",
+    "# Test\n",
+    "M = np.ones(N)\n",
+    "print(total_energy(X, cables, bars, M))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
