--- a/tensegrity.ipynb
+++ b/tensegrity.ipynb
@@ -10,7 +10,8 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
     "np.random.seed(1)\n",
-    "np.set_printoptions(suppress=True, precision=6)"
+    "np.set_printoptions(suppress=True, precision=6)\n",
+    "hey"
    ]
   },
   {
@@ -107,9 +108,7 @@
     "\n",
     "    cable_indices = np.asarray(np.where(cables != 0))\n",
     "    for i, j in cable_indices.T:\n",
-    "        stretch = np.linalg.norm(X[i] - X[j]) - cables[i, j]\n",
-    "        squashed = 1 / (1 + np.exp(-stretch))\n",
-    "        ax.plot([x[i], x[j]], [y[i], y[j]], [z[i], z[j]], 'b--')#, color = (squashed, 0, 0))\n",
+    "        ax.plot([x[i], x[j]], [y[i], y[j]], [z[i], z[j]], 'b--')\n",
     "\n",
     "    bar_indices = np.asarray(np.where(bars != 0))\n",
     "    for i, j in bar_indices.T:\n",
