--- a/tensegrity.ipynb
+++ b/tensegrity.ipynb
@@ -10,8 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
     "np.random.seed(1)\n",
-    "np.set_printoptions(suppress=True, precision=6)\n",
-    "hey"
+    "np.set_printoptions(suppress=True, precision=6)"
    ]
   },
   {
